# multi_agent_system

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
agents/: auditor.py  factory.py  researcher.py  writer.py
database/: ingestion.py
docs/superpowers/specs/: 2026-03-28-tool-adapter-boundaries-design.md
kb_qa/: __init__.py  chains.py  constants.py  main.py  retriever.py  service.py
tools/: crewai_tools.py  knowledge_tools.py  router.py
workflows/: pipeline.py
